src/objects/Descuento__c.object
<CustomObject>
    <fields>
        <fullName>Comentarios__c</fullName>
        <label>Comentarios</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DescuentoFinal__c</fullName>
        <label>Descuento final</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DescuentoInicial__c</fullName>
        <label>Descuento inicial</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Estatus__c</fullName>
        <label>Estatus</label>
        <picklist>
            <picklistValues>
                <fullName>Activo</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactivo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rechazado</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FechaFinVigencia__c</fullName>
        <label>Fecha fin vigencia</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FechaInicioVigencia__c</fullName>
        <label>Fecha inicio vigencia</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Descuentos</relationshipLabel>
        <relationshipName>Descuentos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Modalidad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Modalidad</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo__c.TipoCatalogo__c</field>
                <operation>equals</operation>
                <value>Modalidad</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo__c</referenceTo>
        <relationshipLabel>Descuentos (Modalidad)</relationshipLabel>
        <relationshipName>Descuentos1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Modalidades__c</fullName>
        <label>Modalidades</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nivel__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Nivel</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo__c.TipoCatalogo__c</field>
                <operation>equals</operation>
                <value>Nivel</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo__c</referenceTo>
        <relationshipLabel>Descuentos</relationshipLabel>
        <relationshipName>Descuentos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Niveles__c</fullName>
        <label>Niveles</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Oportunidad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Oportunidad</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Descuentos</relationshipLabel>
        <relationshipName>Descuentos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Periodo__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Periodo</label>
        <referenceTo>Periodo__c</referenceTo>
        <relationshipLabel>Descuentos</relationshipLabel>
        <relationshipName>Descuentos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Periodos__c</fullName>
        <label>Periodos</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PorcentajeDescuento__c</fullName>
        <label>Porcentaje descuento</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TipoDescuento__c</fullName>
        <label>Tipo descuento</label>
        <picklist>
            <picklistValues>
                <fullName>Descuento individual vigente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promoción 0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promoción Solicitada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vigente__c</fullName>
        <formula>AND( FechaInicioVigencia__c &lt;= TODAY() , FechaFinVigencia__c &gt;= TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vigente</label>
        <type>Checkbox</type>
    </fields>
    <label>Descuento</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TipoDescuento__c</columns>
        <columns>PorcentajeDescuento__c</columns>
        <columns>FechaInicioVigencia__c</columns>
        <columns>FechaFinVigencia__c</columns>
        <columns>Periodo__c</columns>
        <columns>Modalidad__c</columns>
        <columns>Nivel__c</columns>
        <columns>Estatus__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <listViews>
        <fullName>AutorizaPromocionesSolicitadas</fullName>
        <columns>NAME</columns>
        <columns>Lead__c</columns>
        <columns>Estatus__c</columns>
        <columns>PorcentajeDescuento__c</columns>
        <columns>FechaInicioVigencia__c</columns>
        <columns>FechaFinVigencia__c</columns>
        <columns>Comentarios__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Autorizar Promociones Solicitadas</label>
        <sharedTo>
            <roleAndSubordinates>DirectorFinanzas</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IndividualVigente</fullName>
        <columns>NAME</columns>
        <columns>Estatus__c</columns>
        <columns>FechaInicioVigencia__c</columns>
        <columns>FechaFinVigencia__c</columns>
        <columns>PorcentajeDescuento__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TipoDescuento__c</field>
            <operation>equals</operation>
            <value>Descuento individual vigente</value>
        </filters>
        <label>Descuento Individual Vigente</label>
    </listViews>
    <listViews>
        <fullName>PromocionCero</fullName>
        <columns>NAME</columns>
        <columns>Estatus__c</columns>
        <columns>FechaInicioVigencia__c</columns>
        <columns>FechaFinVigencia__c</columns>
        <columns>PorcentajeDescuento__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TipoDescuento__c</field>
            <operation>equals</operation>
            <value>Promoción 0</value>
        </filters>
        <label>Promoción Cero</label>
    </listViews>
    <listViews>
        <fullName>PromocionSolicitada</fullName>
        <columns>NAME</columns>
        <columns>Estatus__c</columns>
        <columns>FechaInicioVigencia__c</columns>
        <columns>FechaFinVigencia__c</columns>
        <columns>PorcentajeDescuento__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Lead__c</columns>
        <columns>Oportunidad__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TipoDescuento__c</field>
            <operation>equals</operation>
            <value>Promoción Solicitada</value>
        </filters>
        <label>Promoción Solicitada</label>
    </listViews>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Descuentos</pluralLabel>
    <recordTypes>
        <fullName>DescuentoIndividualVigente</fullName>
        <active>true</active>
        <label>Descuento Individual Vigente</label>
    </recordTypes>
    <recordTypes>
        <fullName>PromocionCero</fullName>
        <active>true</active>
        <label>Promoción Cero</label>
    </recordTypes>
    <recordTypes>
        <fullName>PromocionSolicitada</fullName>
        <active>true</active>
        <label>Promoción Solicitada</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>